hover on button and links, added links to profile images.

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,9 +56,9 @@
 			<div class ="connect">
 				<h2>Connect with Me</h2>
 				<div class ="social_icons">
-					<img class = "social" src = "assets/images/github.png" alt = "GitHub" />
-					<img class = "social" src = "assets/images/linkedin.png" alt = "LinkedIn" />
-					<img class = "social" src = "assets/images/stack2.png" alt = "Stack Overflow" />
+					<a href="https://github.com/JZoshak2"><img class = "social" src = "assets/images/github.png" alt = "GitHub" /></a>
+					<a href="https://www.linkedin.com/in/johnzoshak/"><img class = "social" src = "assets/images/linkedin.png" alt = "LinkedIn" /></a>
+					<a href="http://stackoverflow.com/users/7460102/john-zoshak"><img class = "social" src = "assets/images/stack2.png" alt = "Stack Overflow" /></a>
 				</div> <!-- end social icons -->
 			</div> <!-- end connect -->
 		</div> <!end portfolio section>
