--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 		
 		<div class = "header">
 			<div class ="name">
-				<h1>John Zoshak</h1>
+				<h1><a href ="index.html">John Zoshak</a></h1>
 			</div> <!-- End Name -->
 			<nav>
 				<ul>
